--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
     "classnames": "^2.2.6",
+    "dateformat": "^3.0.3",
     "less": "^3.12.2",
     "next": "9.4.4",
     "react": "16.13.1",
     "react-calendar": "^3.1.0",
     "react-dom": "16.13.1",
-    "ydl-calendar": "^1.0.6"
+    "ydl-calendar": "^1.0.8"
   },
   "devDependencies": {
     "@zeit/next-less": "^1.0.1",
